[project]
name = "singham-reloaded-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "lab>=8.5",
    "openai>=2.8.1",
    "python-dotenv>=1.2.1",
    "websockets>=15.0.1",
    "arize-phoenix>=12.16.0",
    "arize-phoenix-otel>=0.14.0",
    "openinference-instrumentation-openai>=0.1.40",
]
